tests/integration/security/filebased_tls_origination/test_artifacts/security-filebased-tls-origination-/TestEgressGatewayTls/Mutual_TLS_origination_from_egress_gateway_to_https_endpoint/_test_context/DestinationRule.2065453605.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-filebased-mutual
spec:
  host: "external-service.serverns-2-64913.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          clientCertificate: /etc/certs/custom/cert-chain.pem
          privateKey: /etc/certs/custom/key.pem
          caCertificates: /etc/certs/custom/root-cert.pem
          sni: external-service.serverns-2-64913.svc.cluster.local
